# sepflows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  log.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
examples/: methanol_purification_flowsheet.py
src/sepflows/: __init__.py  _version.py  config.py  constants.py
src/sepflows/absorption/: __init__.py  co2_capture.py
src/sepflows/asu/: __init__.py  cryogenic.py
src/sepflows/distillation/: __init__.py  rigorous.py  shortcut.py
src/sepflows/flash/: __init__.py  drum.py
src/sepflows/utils/: __init__.py  thermodynamics.py
tests/: conftest.py
tests/integration/: test_methanol_flowsheet.py
tests/unit/: test_absorption_asu.py  test_distillation.py  test_flash.py  test_thermodynamics.py
