[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sepflows"
version = "0.1.0"
description = "Separation Process Simulation Toolkit — flash drums, distillation trains, CO₂ capture, and cryogenic ASU design in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Defne Nihal Ertuğrul", email = "defnalk@example.com" },
]
keywords = [
    "chemical engineering",
    "distillation",
    "separation processes",
    "flash drum",
    "CO2 capture",
    "air separation",
    "process simulation",
    "methanol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "numpydoc>=1.6",
]

[project.urls]
Homepage = "https://github.com/defnalk/sepflows"
Repository = "https://github.com/defnalk/sepflows"
Issues = "https://github.com/defnalk/sepflows/issues"
Changelog = "https://github.com/defnalk/sepflows/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sepflows"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (slower, full flowsheet)",
    "slow: marks tests as unusually slow",
]
addopts = [
    "--tb=short",
    "-q",
]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/sepflows"]
omit = ["src/sepflows/_version.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ── Ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
line-length = 99
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle (Google style)
    "ANN",  # flake8-annotations
]
ignore = [
    "D100",  # missing docstring in public module (covered by package __init__)
    "D104",  # missing docstring in public package
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ── Mypy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
